--- a/TrouvTonResto/app/src/main/res/values/strings.xml
+++ b/TrouvTonResto/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="title_activity_resto">RestoActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <string name="go">Go !</string>
+
 </resources>
