--- a/TrouvTonResto/app/src/main/res/values/strings.xml
+++ b/TrouvTonResto/app/src/main/res/values/strings.xml
@@ -22,7 +22,47 @@
         <item>Grillon</item>
     </string-array>
 
+    <string-array name="restosEntrees">
+        <item>Saucisson Brioché</item>
+        <item>Haricot vert - Thon</item>
+        <item>Salade</item>
+        <item>Oeuf mimosa</item>
+        <item>Boudin au pomme</item>
+        <item>Quiche à la volaille</item>
+        <item>Mini pizza</item>
+    </string-array>
+
+
+
+    <string-array name="restosPlats">
+        <item>Pizza</item>
+        <item>Couscous</item>
+        <item>Sanswichs au saumon</item>
+        <item>brochette frites</item>
+        <item>Steack frites</item>
+        <item>Poisson et légumes</item>
+        <item>Courgette - côtelette</item>
+    </string-array>
+
+
+
+    <string-array name="restosDesserts">
+        <item>Yahourt</item>
+        <item>Mousse au chocolat</item>
+        <item>Eclaire au chocolat</item>
+        <item>Beignet</item>
+        <item>Tarte aux pommes</item>
+        <item>Tarte au citron</item>
+        <item>Tarte aux fraises</item>
+    </string-array>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu">Menu</string>
+    <string name="entree">Entrée</string>
+    <string name="plat">Plat</string>
+    <string name="dessert">Dessert</string>
+    <string name="tpsAttente">Temps d\'attente</string>
 
 </resources>
