Ajout des images pour la partie difficultés

--- a/TrouvTonResto/Rapport/sections/difficultes.tex
+++ b/TrouvTonResto/Rapport/sections/difficultes.tex
@@ -58,7 +58,8 @@ Pour la position des flèches, de part et d'autre de l'écran nous perdions trop
 place qui est réduite sur les téléphones. Les mettre de chaque côté du titre amenait une
 incohérence. Nous avions l'impression de changer de graphique et non de restaurant. C'est
 pourquoi nous avons décidé de rajouter une barre au dessus de ce titre pour y mettre les
-flèches. \\
+flèches. 
+\\
  
 Un autre problème que nous avons rencontré sur cette page est la taille des menus. Si 
 nous prenions, par exemple, les entrées du Restaurant universitaire de la Doua, chaque midi
@@ -67,7 +68,10 @@ il y en a une quinzaine, obligeant de ce fait l'utilisateur
 plat principal. C'est pourquoi, nous avons décidé de mettre le menu dans une liste extensible.
 Ainsi, l'utilisateur ne voit au départ que les grandes catégories du menu (entrée, plat et
 dessert). C'est seulement en cliquant sur ce qui l'intéresse qu'il pourra voir son contenu.
-Cela permet d'éviter de surcharger cet écran. \\
+Cela permet d'éviter de surcharger cet écran. 
+
+\unscaledFigure{images/resto.png}{Détail d'un restaurant où nous pouvons voir 
+les flèches pour changer de restaurant et la liste extensible}
  
  
 Sur la page listant les restaurants, il existe un curseur qui permet à l'utilisateur
@@ -76,7 +80,8 @@ prévisions prend un certain temps. Durant le calcul, il ne faut pas que l'utili
 puisse cliquer sur un restaurant alors que les données ne celui-ci ne sont pas
 encore à jour. Comment prévenir l'utilisateur qu'un calcul est en cours et qu'il 
 faut attendre ? Pour répondre à cette question, nous avons décidé de griser la 
-liste des restaurants à partir du moment où le curseur est déplacé. \\
+liste des restaurants à partir du moment où le curseur est déplacé. 
+\unscaledFigure{images/restos_slide.png}{Liste des restaurants grisée car l'utilisateur déplace le curseur}
 
 Évidemment notre application contient un écran de préférences pour permettre
 à l'utilisateur de modifier les réglages de l'application. Néanmoins, nous 
@@ -85,7 +90,8 @@ quoi sert d'afficher un restaurant dans lequel l'utilisateur ne puisse pas aller
 Un utilisateur lambda a rarement le réflexe d'aller modifier les préférences de
 son application. C'est pourquoi nous avons décidé d'afficher un écran de première
 ouverture qui permet à l'utilisateur de personnaliser l'application et de lui
-expliquer brièvement son fonctionnement. \\
+expliquer brièvement son fonctionnement.
+\unscaledFigure{images/first_screen_1.png}{Un des écrans affichés à la première connexion qui explique brièvement le fonctionnement de l'application}
 
 Le dernier problème d'utilisabilité que nous avons rencontré se situe
 dans l'affichage de la carte. Au début, nous centrions la carte sur la 
