[edit] Ajout des premières images

--- a/TrouvTonResto/Rapport/sections/documentation.tex
+++ b/TrouvTonResto/Rapport/sections/documentation.tex
@@ -2,44 +2,45 @@ Au premier lancement de l’application, un certain nombre de questions vous
 seront posées ayant pour objectif de définir votre profil utilisateur. Les 
 réponses apportées seront alors mémorisées par l’application afin de
 répondre au mieux à vos attentes. Vous trouverez ci après l’écran de
-chargement de l’application (image 1), ainsi qu’un aperçu de la première
+chargement de l’application, ainsi qu’un aperçu de la première
 et de la seconde question qui vous sera poser au premier lancement de
 l’application (image 2 et 3) : 
-
-[TODO : insert image chargement + 2 screenshots des questions de la 1ere connexion]
+\unscaledFigure{images/first_screen_1.png}{Premier écran lors du premier
+lancement de l'application}
+\unscaledFigure{images/first_screen_2.png}{Second écran lors du premier
+lancement de l'application}
+\unscaledFigure{images/first_screen_3.png}{Troisème écran lors du premier
+lancement de l'application}
 
 Ces paramètres peuvent être modifiés à tout moment dans la menu paramètre
-accessible via le volet de navigation comme le présente l’image ci-après (image 4) : 
+accessible via le volet de navigation comme le présente l’image ci-après : 
+\unscaledFigure{images/drawer.png}{Volet de navigation}
 
-[TODO : insert image menu + cercle sur le menu paramètres]
-
-Dans les paramètres (image 5), il est aussi possible de supprimer la notification
+Dans les paramètres, il est aussi possible de supprimer la notification
 automatique qui vous sera envoyé systématiquement à midi tous les jours. Il est
 également possible de changer l’heure de cette notification afin qu’elle puisse vous
 prévenir au moment le plus opportun selon votre situation. 
-
-[TODO : insert image paramètres] 
+\unscaledFigure{images/prefs.png}{Ecran des paramètres}
 
 Une fois votre application paramétrée avec vos préférences, vous arriverez
-systématiquement sur cet écran lors d’un nouveau lancement (image 6). Nous
+systématiquement sur cet écran lors d’un nouveau lancement. Nous
 rapellons que toute application sous android peut tourner en tache de fond,
 n’oubliez pas de la quitter intégralement lorsque vous n’en avez plus l’utilité.
 Cela augmentera l’autonomie de votre appareil et permettra de limiter vos
 consommations de datas. 
-
-[TODO : insert écran principal]
+\unscaledFigure{images/restos.png}{Ecran principal de l'application}
 
 Sur cet écran sont rangés par ordre d’attente minimum l’ensemble des
 restaurants cochés précédement. Il est possible de régler l’heure à laquelle
 vous souhaitez déjeuner grâce au slider situé en bas de l’écran (image 7)
-
-[TODO : insert écran principal comme précédemment avec zoom sur le slider]
+\unscaledFigure{images/restos_slide.png}{Le slider permet d'ajuster l'heure
+à laquelle vous souhaitez déjeuner}
 
 Il est possible sur un simple clique sur un restaurant de l’écran précédent de
 visualiser les informations précise de ce dernier. Voici un exemple avec le
-restaurant Castor et Pollux (image 8) : 
-
-[TODO : insert image Castor et Pollux]
+restaurant universitaire de la Doua : 
+\unscaledFigure{images//resto.png}{Les détails du restaurant universitaire de
+la Doua}
 
 Sur cet écran, bon nombre d’informations sont disponibles. En premier lieu,
 vous trouverez une estimation du temps d’attente en fonction de l’heure de
@@ -47,29 +48,35 @@ passage au restaurant. Cette estimation future est basée sur les connaissances
 de l’application. Cependant, l’heure affichée avec la barre de séparation est le
 temps réel d’attente, défini par des capteurs placés judicieusement sur toutes
 les files d’attente des différents points de restauration (image 9) : 
-
-[TODO : insert image avec zoom sur le graphique des heures]
+\unscaledFigure{images//resto.png}{Les détails du restaurant universitaire de
+la Doua}
 
 Sur le même écran, légèrement au dessous se trouve le détail des entrées,
 plats et desserts qui sont actuellement disponibles dans le restaurant
 sélectionné. Dans l’écran ci-après (image 10), nous sommes toujours sur
 notre écran Castor et Pollux et nous pouvons voir qu’il y aura en entée : 
 X, Y et Z, en plat : T, V, W et en dessert : Alpha, Beta, VariableSansNom. 
+\unscaledFigure{images/resto.png}{Les détails du restaurant universitaire de
+la Doua}
 
-[TODO : insert image détail menu ouvert]
-
-Enfin, en dessous des plats disponibles dans le restaurant se trouve un
-bouton permettant de démarrer l’application Maps (application Google) afin de
+Enfin, en dessous des plats disponibles dans le restaurant se trouve le
+bouton "Y aller !" permettant de démarrer l’application Maps (Google) afin de
 vous rendre de votre lieu actuel vers le restaurant sélectionné. Voici un exemple
-de cette carte (image 11) :
+de cette carte :
+\unscaledFigure{images//resto.png}{Les détails du restaurant universitaire de
+la Doua}
 
-[TODO : insert le bouton + la map]  
-
-Enfin, depuis le détail d’un restaurant il vous est possible de swipper des 
+Depuis le détail d’un restaurant il vous est possible de swipper des 
 détails d’un restaurant à un autre facilement en glissant son doigt vers la
 gauche ou la droite de l’écran (image 12) : 
+\unscaledFigure{images//resto.png}{Les détails du restaurant universitaire de
+la Doua}
 
-[TODO : insert detail restaurant + fleche pour montrer le swipe]
+Enfin, pour les nouveaux étudiants, il est possible d'accéder via le volet de navigation
+à la carte du campus afin de localiser rapidemment où sont situés les différents
+restaurants présents dans l'application.
+\unscaledFigure{images/map.png}{Carte du campus avec la localisation des différents
+restaurants de l'application}
 
 Pour toute information complémentaire, l’héxanome H4404 reste disponible
 à l’adresse mail suivante : heptanhommes@googlegroups.com. 
