[edit] suppression numérotation des images

--- a/TrouvTonResto/Rapport/sections/documentation.tex
+++ b/TrouvTonResto/Rapport/sections/documentation.tex
@@ -32,7 +32,7 @@ consommations de datas.
 
 Sur cet écran sont rangés par ordre d’attente minimum l’ensemble des
 restaurants cochés précédement. Il est possible de régler l’heure à laquelle
-vous souhaitez déjeuner grâce au slider situé en bas de l’écran (image 7)
+vous souhaitez déjeuner grâce au slider situé en bas de l’écran
 \unscaledFigure{images/restos_slide.png}{Le slider permet d'ajuster l'heure
 à laquelle vous souhaitez déjeuner}
 
@@ -47,13 +47,13 @@ vous trouverez une estimation du temps d’attente en fonction de l’heure de
 passage au restaurant. Cette estimation future est basée sur les connaissances
 de l’application. Cependant, l’heure affichée avec la barre de séparation est le
 temps réel d’attente, défini par des capteurs placés judicieusement sur toutes
-les files d’attente des différents points de restauration (image 9) : 
+les files d’attente des différents points de restauration : 
 \unscaledFigure{images//resto.png}{Les détails du restaurant universitaire de
 la Doua}
 
 Sur le même écran, légèrement au dessous se trouve le détail des entrées,
 plats et desserts qui sont actuellement disponibles dans le restaurant
-sélectionné. Dans l’écran ci-après (image 10), nous sommes toujours sur
+sélectionné. Dans l’écran ci-après, nous sommes toujours sur
 notre écran Castor et Pollux et nous pouvons voir qu’il y aura en entée : 
 X, Y et Z, en plat : T, V, W et en dessert : Alpha, Beta, VariableSansNom. 
 \unscaledFigure{images/resto.png}{Les détails du restaurant universitaire de
