--- a/TrouvTonResto/Rapport/sections/analyseBesoin.tex
+++ b/TrouvTonResto/Rapport/sections/analyseBesoin.tex
@@ -1,117 +1,116 @@
 \subsection{Méthode retenue}
 
-L’analyse des besoins devait être réalisée au préalable de toute conception ou
-développement de l’application. Nous avons choisi d’effectuer notre enquête en
-établissant des interviews avec un questionnaire prédéfini et construit avec 
-l’ensemble de l’équipe au préalable. Nous avons préféré cette méthode qui 
-vise à directement rencontrer les utilisateurs plutôt qu’une version numérique
-du questionnaire pour une raison simple : nous avions pour crainte que les 
-questionnaires en ligne n’aurait été dans l’ensemble complétés uniquement 
-par des élèves de 3 ou 4ème année informatique, ce qui aurait rendu l’échantillon
-peu représentatif et aurait ainsi fausser la pertinence des résultats obtenus. \\
-Nous nous sommes donc séparés en trois groupes de deux membres du groupe
-et un groupe de trois personnes. Notre enquête a été réalisé dans différents 
-lieux stratégiques : 
+L'analyse des besoins devait être réalisée au préalable de toute conception ou
+développement de l'application. Nous avons choisi d'effectuer notre enquête en
+établissant des interviews avec un questionnaire prédéfini et construit préalablement 
+avec l'ensemble de l'équipe. Nous avons préféré cette méthode qui 
+vise à directement rencontrer les utilisateurs plutôt qu'une version numérique
+du questionnaire pour une raison simple. Nous avions pour crainte que les 
+questionnaires en ligne ne soient complétés uniquement 
+par des élèves de 3 ou 4ème année en informatique. Ceci aurait rendu l'échantillon
+peu représentatif et aurait ainsi faussé la pertinence des résultats obtenus. \\
+Nous nous sommes donc séparés en deux groupes de deux et un groupe de trois personnes.
+Notre enquête a été réalisé dans différents lieux stratégiques : 
 \begin{itemize}
-\item Devant le grillon, le castor gourmand et l’olivier, lieu où l’on trouve pas
-moins trois restaurants distincts dont deux restaurants insaliens. 
-\item Devant le prévert et le castor et pollux, lieux très fréquentés le midi
-lors des pauses repas.
-\item Devant le Restaurant Universitaire (RU), lieu affectionné par beaucoup
-d’étudiants et pas seulement des insaliens. 
-\item Un groupe a également fait un tour dans les laboratoires du CITI, où
-nous retrouvons une nouvelle fois des profils distincts (professeurs et 
+\item devant le Grillon, le Castor gourmand et l'Olivier, lieu où il n'y a pas
+moins de trois restaurants distincts dont deux insaliens,
+\item devant le Prévert et le Castor et Pollux, endroit très fréquenté le midi,
+\item devant le Restaurant Universitaire de la Doua (\textsc{ru}), restaurant affectionné
+par beaucoup d'étudiants et pas seulement des insaliens,
+\item et un groupe a également fait un tour dans les laboratoires du \textsc{citi}, où
+nous retrouvons une nouvelle fois des profils différents (professeurs et 
 doctorants).
 \end{itemize}
 
 \subsection{Contenu du questionnaire}
-Le questionnaire a été tourné d’une façon spécifique. Nous avons dans un 
+Le questionnaire a été tourné d'une façon spécifique. Nous avons dans un 
 premier temps posé des questions générales pour obtenir le profil de notre
-futur utilisateur, sans préciser le pourquoi du sondage. Puis nous posions 
+futur utilisateur, sans préciser le but du sondage. Puis nous posions 
 des questions générales sur leurs pratiques concernant les repas du midi
-et procédions à des mises en situation simple. Enf, nous dévoilions le
+en procédant à des mises en situation simple. Enfin, nous dévoilions le
 sujet du sondage et les fonctionnalités que nous envisagions de
-développer pour savoir si oui ou non l’utilisateur y voyer un intérêt ou non. 
-Évidement, nous étions ouverts à toutes les idées qu’il pouvait avoir
+développer pour savoir si oui ou non l'utilisateur y voyait un intérêt. 
+Évidement, nous étions ouverts à toutes les idées qu'il pouvait avoir
 afin de découvrir éventuellement de nouvelles fonctionnalités. \\
 Voici quelques exemples de questions présentes dans le questionnaire. 
-Sachant qu’il est évident que les questions différaient d’un interview à 
-l’autre en fonction de l’implication de l’interviewé. 
+Il est évident que les questions différaient d'un interview à 
+l'autre en fonction de l'implication et des réponses de l'interviewé. 
 \begin{itemize}
-\item En quelle année d’étude es tu ? Es tu Insalien ?
-\item Où manges tu les midis ?
-\item Pourquoi ne manges tu pas ailleurs ? (essayer de forcer les points
-comme : le temps d’attente, le prix, la facilité de manger avec des amis,
-la proximité, la qualité, la variété des menus, le menu du jour)
-\item Où manges tu si tu as moins d’une heure pour manger ?
-\item Si tu avais du qu’un autre restaurant avait un temps d’attente inférieur, 
-cela aurait il influencer ton choix ? 
+\item En quelle année d'étude es-tu ? Es-tu insalien ?
+\item Où manges-tu les midis ?
+\item Pourquoi ne manges-tu pas ailleurs ? (Il fallait essayer de d'amener les points
+suivant : le temps d'attente, le prix, la facilité de manger avec des amis,
+la proximité, la qualité, la variété des menus et le menu du jour)
+\item Où manges-tu si tu as moins d'une heure pour manger ?
+\item Si tu avais su qu'un autre restaurant avait un temps d'attente inférieur, 
+cela aurait-il influencé ton choix ? 
 \item Si tu arrives dans le restaurant et que le menu ne te plaît pas,
-que fais tu ?
-\item Si tu avais su le menu au préalable, aurai tu changer ton choix ?
-\item Serai tu intéresser par des notifications sur ton mobile pour te dire 
+que fais-tu ?
+\item Si tu avais connu le menu au préalable, aurais-tu changé ton choix ?
+\item Serais-tu intéressé par des notifications sur ton mobile afin de te dire 
 quel restaurant correspond le mieux à tes critères ? (sachant que des 
-critères tels que le prix, le temps d’attente, la proximité le menu ou autre
-pourrait être pris en compte)
-\item Quelles fonctionnalités supplémentaires t’intéresserai d’avoir sur 
+critères tels que le prix, le temps d'attente, la proximité le menu ou autres
+pourraient être pris en compte)
+\item Quelles fonctionnalités supplémentaires t'intéresseraient d'avoir sur 
 une application pour ton smartphone ?
-\item Serais tu intéressé par recharger ton forfait sur ton smartphone ?
+\item Serais-tu intéressé par la possibilité de recharger ton forfait sur ton smartphone ?
 \end{itemize}
 
 \subsection{Échantillon de la population}
-Suite a l’élaboration de ces questionnaires, nous avons recensés 
-les résultats dans un tableur et discuter des différentes réponses en 
+Suite à l'élaboration de ces questionnaires, nous avons recensé 
+les résultats dans un tableur et discuté des différentes réponses en 
 fonction du profil de notre population. Nous avons obtenu 27 réponses. 
-Nous avons globalement beaucoup d’insaliens mais équitablement réparti
-entre le premier cycle et le second cycle. Parmi ces étudiants, deux
-étudiants d’échange sont représentés, mais avec des réponses bien
-différentes, distinguant donc très clairement un nouveau profil utilisateur. 
-Nous avons également un étudiant de l’université Lyon 1. Nous avons aussi
-un doctorant et deux professeurs du département TC. 
+Globalement, nous avons beaucoup d'insaliens. Ils sont néanmoins équitablement répartis
+entre le premier et le second cycle. Parmi ces étudiants, deux
+étudiants d'échange sont représentés. Ils avaient des réponses bien
+différentes des autres ce qui nous a permis de distinguer très clairement un nouveau profil
+utilisateur. Nous avons également un étudiant de l'université Lyon 1,
+un doctorant et deux professeurs du département \textsc{tc}. 
 
 \subsection{Résultats obtenus}
-Dans la quasi totalité des cas, à l’exception des gens moins pressés 
-pour des raisons d'horaires plus flexibles, le facteur temps est très important.
-Sans cesse la réponse est : j’irai au plus proche, au plus rapide. Cela
-n’est pas choquant quand on sait que à quelques minutes prêt la file
-d’attente peut passer de quelques secondes d’attente à plusieurs
-dizaines de minutes. Pour beaucoup d’étudiant, l’argument majeur était que 
-le temps entre midi et 14 heures permet de faire de nombreuses choses : 
-activités associative, travailler sur un devoir à rendre ou une IE approchante,
-travail en projet, réunion de travail, sieste. Les raisons ne manquent pas 
-pour expliquer que tout le monde veut manger rapidement. Certains profils
-se distinguent tout de même. A l’image d’une étudiante végétarienne qui 
-est très intéresser par la qualité de la nourriture et si elle trouvera à manger 
-dans le restaurant qu’elle fréquente. Un autre exemple de profil distinct se
-retrouve auprès de nos deux étudiants d’échange interviewés. Ceux ci
-aimeraient savoir la localisation des restaurants et éventuellement pouvoir
-s’y rendre. Ne connaissant pas les différents restaurants, les différents prix
-pratiqués ou autre, ces étudiants se retrouvent parfois un peu perdu au
-début de l’année et suivent finalement leur groupe ou leurs amis.
+Dans la quasi totalité des cas, à l'exception des gens moins pressés 
+de part leurs horaires plus flexibles, le facteur temps est très important.
+Sans cesse la réponse est : j'irais au plus proche, au plus rapide. Cela
+n'est pas choquant car en quelques minutes la file
+d'attente peut passer de quelques minutes d'attente à plusieurs
+dizaines de minutes. Pour beaucoup d'étudiant, l'argument expliquant cette
+importante est que le temps entre midi et quatorze heures permet de faire de
+nombreuses choses comme des activités associatives, travailler sur un devoir à rendre,
+travailler en projet, faire une réunion de travail ou bien une sieste. Les raisons ne manquent pas 
+pour expliquer que tout le monde veuille manger rapidement. 
 
-Quand nous discutions des fonctionnalités propres de l’application, certains
+Certains profils se distinguent tout de même. Par exemple, nous avons interrogé 
+une étudiante végétarienne qui est plus intéressée par la qualité de la nourriture.
+Un autre exemple de profil distinct se retrouve auprès de nos deux étudiants d'échange interviewés.
+Ceux-ci aimeraient savoir la localisation des restaurants sur le campus et éventuellement une
+explication pour pouvoir s'y rendre. Ne connaissant pas les différents restaurants, les
+différents prix pratiqués ou autre, ces étudiants se retrouvent parfois un peu perdus au
+début de l'année et suivent finalement leur groupe ou leurs amis.\\
+
+Quand nous discutions des fonctionnalités propres de l'application, certains
 aspects se sont dégagées : 
 \begin{itemize}
-\item Les étudiants veulent connaître le temps d’attente en temps réel afin de
+\item Les étudiants veulent connaître le temps d'attente en temps réel afin de
 faire leur choix rapidement en sortant de cours. 
-\item Aucun n’a souhaité avoir un contenu social dans cette application qui 
-permettrait de manger avec ses amis, ceux qui essayent de coordonner leur
-repas ne le font que rarement le midi (à l’exception des collègues d’une 
+\item Aucun n'a souhaité avoir un contenu social dans cette application qui 
+pourrait permettre de manger avec ses amis. Ceux qui essayent de coordonner leur
+repas ne le font que rarement le midi (à l'exception des collègues d'une 
 même classe) et préfèrent donc se rencontrer le soir. Ceux qui se coordonnent
-le midi utilisent des applications déjà existantes telles que les SMS,
-WhatsApp, Messenger, ou autre application de communication.
+le midi utilisent des applications déjà existantes telles que les \textsc{sms},
+WhatsApp, Messenger, etc.
 \item Certains ont demandé de pouvoir voir le menu sur demande avec
-éventuellement une image des plats. Cela est utile pour les étudiants d’échange
+éventuellement une image des plats. Cette requête vient des étudiants d'échange
 qui parfois ne comprennent pas ce qui se retrouvera dans leur assiette.
-\item Les étudiants sont pour l’envoie d’une notification qui leur dirait quel
+\item Les étudiants sont pour l'envoi d'une notification leur disant quel
 restaurant correspond le mieux à leur attente pour la journée. 
-\item Un affichage du prix est demandé par certains, bien que cela n’est que
-peu d’importance pour d’autre étant donné que beaucoup de restaurants coûtent
-globalement la même chose : un étudiant paye le même prix au Grillon, à l’Olivier,
+\item Un affichage du prix est demandé par certains, bien que cela n'est que
+peu d'importance pour d'autres étant donné que beaucoup de restaurants coûtent
+globalement la même chose. Un étudiant paye le même prix au Grillon, à l'Olivier,
 au Prévert et Castor et Pollux. Les prix du Castor Gourmand sont variables mais
-restent légèrement supérieurs au prix du RU qui arrivent en tête sur ce critère.
+restent légèrement supérieurs au prix du \textsc{ru} qui arrivent toujours en tête sur
+ce critère.
 \end{itemize}
 
 La partie ultérieure présentant la conception contiendra les différents écrans
-composants l'application. Nous ferons des références vers cette partie afin
+composant l'application. Nous ferons des références vers cette partie afin
 de justifier nos choix conceptuels.
