--- a/TrouvTonResto/Rapport/sections/difficultes.tex
+++ b/TrouvTonResto/Rapport/sections/difficultes.tex
@@ -32,7 +32,7 @@ une application le plus proche possible de la réalité. C'est pourquoi nous avo
 utilisé des minuteurs pour simuler les temps d'attentes et l'arrivée des 
 notifications. 
 
-\section{Problèmes d'utilisabilités rencontrés}
+\subsection{Problèmes d'utilisabilités rencontrés}
 
 Le principal problème d'utilisabilité que nous avons rencontré se trouve sur 
 la fenêtre d'affichage des détails d'un restaurant. Nous voulions pouvoir 
