--- a/TrouvTonResto/Rapport/sections/documentation.tex
+++ b/TrouvTonResto/Rapport/sections/documentation.tex
@@ -1,92 +1,110 @@
-A chaque lancement de l'application vous trouverez l'écran de la figure \ref{loadingg} qui 
-permet à l'application de récupérer les informations sur le réseau.
-\unscaledFigure{images/loading.png}{Ecran de chargement de 
-l'application \label{loadingg}}
-
-Au premier lancement de l’application, un certain nombre de questions vous
+\subsection{Première ouverture de l'application}
+Au premier lancement de l'application, un certain nombre de questions vous
 seront posées ayant pour objectif de définir votre profil utilisateur. Les 
-réponses apportées seront alors mémorisées par l’application afin de
-répondre au mieux à vos attentes. L'écran \ref{first} représente la première question
-qui vous sera posée. L'écran \ref{second} représente la seconde question qui vous 
-sera posée, tant dis que l'écran \ref{third} représente la troisième question qui vous
-sera posée. 
-\unscaledFigure{images/first_screen_1.png}{Premier écran lors du premier
-lancement de l'application \label{first}}
-\unscaledFigure{images/first_screen_2.png}{Second écran lors du premier
-lancement de l'application \label{second}}
-\unscaledFigure{images/first_screen_3.png}{Troisème écran lors du premier
-lancement de l'application \label{third}}
+réponses apportées seront alors mémorisées par l'application afin de
+répondre au mieux à vos attentes. Nous vous conseillons de répondre à ces 
+questions mais si vous préférez accéder directement au c\oe ur de l'application, 
+cliquez sur \includegraphics{images/ignorer.png}. 
 
-Ces paramètres peuvent être modifiés à tout moment dans la menu paramètre
-accessible via le volet de navigation comme le présente l’image ci-après : 
-\unscaledFigure{images/drawer.png}{Volet de navigation}
+Pour accéder aux autres questions, cliquez sur le bouton \includegraphics{images/next.png}
+ou glissez votre doigt sur l'écran de la droite vers la gauche comme sur 
+l'image ci-dessous :
+\strechedFigure{images/doc_first_screen.png}{Changement d'écran lors du premier lancement \label{first}}
 
-Dans les paramètres, il est aussi possible d' activer/supprimer la notification
-journalière automatique qui vous est envoyée systématiquement à midi tous les jours.
-Il est également possible de changer l’heure de cette notification afin qu’elle 
-puisse vous prévenir au moment le plus opportun selon votre situation. 
-Enfin, il est possible, comme le montre l'écran \ref{prefs} de choisir si vous 
-préférez que vos restaurants soient choisis selon la proximité ou le temps 
-d'attente.
-\unscaledFigure{images/prefs.png}{Ecran des paramètres \label{prefs}}
+Une fois toutes les étapes complétées, cliquez sur \includegraphics{images/ok.png} pour 
+accéder à l'application. 
 
-Une fois votre application paramétrée avec vos préférences, vous arriverez
-systématiquement sur l'écran \ref{restos} lors d’un nouveau lancement. Nous
-rapellons que toute application sous android peut tourner en tâche de fond,
-n’oubliez pas de la quitter intégralement lorsque vous n’en avez plus l’utilité.
-Cela augmentera l’autonomie de votre appareil et permettra de limiter vos
-consommations de datas. 
-\unscaledFigure{images/restos.png}{Ecran principal de l'application 
+\subsection{Visualiser la liste des restaurants}
+Lors du lancement de l'application, vous arriverez sur l'écran principal qui
+liste vos restaurants préférés. Sur cet écran, les restaurants sont rangés selon l'ordre défini par vos paramètres. Nous
+rappelons que toute application sous Android peut tourner en tâche de fond.
+N'oubliez donc pas de la quitter intégralement lorsque vous n'en avez plus l'utilité.
+Cela augmentera l'autonomie de votre appareil et permettra de limiter votre
+consommation de données. 
+Voici un aperçu de l'écran principal :
+\unscaledFigure{images/restos.png}{Écran principal de l'application 
 \label{restos}}
 
-Sur l'écran \ref{slider} sont rangés par ordre correspondant à vos paramètres l’ensemble des
-restaurants cochés précédement. Il est possible de régler l’heure à laquelle
-vous souhaitez déjeuner grâce au slider situé en bas de l’écran.
-\unscaledFigure{images/restos_slide.png}{Le slider permet d'ajuster l'heure
-à laquelle vous souhaitez déjeuner \label{slider}}
+Il est possible de régler l'heure à laquelle
+les estimations affichées à droite sont calculées en déplaçant le curseur situé
+en bas de l'écran : 
+\unscaledFigure{images/slider.png}{Ce curseur permet d'ajuster l'heure
+à laquelle vous souhaitez obtenir les estimations \label{slider}}
  
-Il est possible sur un simple clique sur un restaurant de l’écran précédent de
-visualiser les informations précise de ce dernier. Voici un exemple avec le
-restaurant universitaire de la Doua : 
-\unscaledFigure{images/resto.png}{Les détails du restaurant universitaire de
-la Doua}
+\subsection{Visualiser les détails d'un restaurant}
+Pour afficher les détails d'un restaurant, cliquez sur le nom de celui-ci dans
+la liste des restaurants :  
+\strechedFigure{images/doc_resto.png}{Accès aux détails d'un restaurant}
 
-Sur cet écran, bon nombre d’informations sont disponibles. En premier lieu,
-vous trouverez une estimation du temps d’attente en fonction de l’heure de
-passage au restaurant. Cette estimation future est basée sur les connaissances
-de l’application. Cependant, l’heure affichée avec la barre de séparation est le
-temps réel d’attente, défini par des capteurs placés judicieusement sur toutes
-les files d’attente des différents points de restauration. Voici un exemple d'un
-exemple de graphique de fil d'attente de l'Olivier :
-\unscaledFigure{images/graph_attente.png}{Les détails du restaurant  l'Olivier}
+Sur cet écran, un bon nombre d'informations sont disponibles. En premier lieu,
+vous trouverez une estimation du temps d'attente en fonction de l'heure de
+passage au restaurant. Cette estimation est basée sur les connaissances
+de l'application. L'heure affichée à coté du curseur rouge est par défaut le
+temps d'attente réel actuellement. Vous pouvez obtenir une estimation du temps
+d'attente en le faisant glisser avec votre doigt vers la droite.
+Le temps d'attente réel est défini par des capteurs placés judicieusement
+sur toutes les files d'attente des différents points de restauration.
 
+Pour afficher les détails du menu, cliquez sur la catégorie qui vous intéresse 
+(Entrée, Plat et Dessert) en bas du graphique. En cliquant, la liste des entrées, 
+plats ou desserts vont s'afficher. 
 Sur le même écran, légèrement plus bas, se trouve le détail des entrées,
-plats et desserts qui sont actuellement disponibles dans le restaurant
-sélectionné. Dans l’écran \ref{detailsMenu}, nous sommes toujours sur
-notre écran de l'Olivier et nous pouvons voir qu’il y aura en entée : 
-de l'oeuf mimosa, de la quiche à la volaille et du saucisson brioché, en plat : 
-de la brochette servis avec des frites, du poisson servi avec des légumes et de 
-la pizza et en dessert : seulement des beignets sont proposés.  
+des plats et des desserts qui sont actuellement disponibles dans le restaurant
+sélectionné. Comme nous pouvons le voir dans l'exemple suivant, après
+avoir cliquez sur Entrée nous pouvons voir qu'il y a de l'\oe uf mimosa, 
+de la quiche à la volaille et du saucisson brioché en ce moment.
 \unscaledFigure{images/menus_restaurant_details.png}{Les détails des menus
 de l'Olivier \label{detailsMenu}}
 
-Enfin, en dessous des plats disponibles dans le restaurant se trouve le
-bouton "Y aller !" permettant de démarrer l’application Maps (Google) afin de
-vous rendre de votre lieu actuel vers le restaurant sélectionné. Voici un exemple
-lorsque l'on appuie sur le bouton "Y aller" :
-\unscaledFigure{images/google_maps.png}{Utilisation de l'application Google Map
-afin de réaliser les déplacements}
+Pour savoir comment aller à ce restaurant depuis votre position actuelle, cliquez
+sur le bouton "Y aller !" en bas de l'écran. 
+Ceci va démarrer l'application Google Maps afin de vous guider pour
+vous rendre de votre lieu actuel vers le restaurant.
 
-Depuis le détail d’un restaurant il vous est possible de swipper des 
-détails d’un restaurant à un autre facilement en glissant son doigt vers la
-gauche ou la droite de l’écran. Les défilements ont lieu d'un restaurant à l'autre
-conformément à la liste triée que nous avons vu précédement (cf écran \ref{restos}).
+Depuis le détail d'un restaurant vous pouvez afficher rapidement les détails 
+d'un autre restaurant en glissant votre doigt vers la
+gauche ou la droite de l'écran. Vous pouvez également utiliser les flèches présentent
+de part et d'autre de titre "Détail". 
+\strechedFigure{images/doc_resto_switch.png}{Passer des détails d'un restaurant à un autre}
+Les changements ont lieu d'un restaurant à l'autre
+conformément à la liste triée que nous avons vu précédemment (cf écran \ref{restos}).
 
-Enfin, pour les nouveaux étudiants, il est possible d'accéder via le volet de navigation
-à la carte du campus afin de localiser rapidemment où sont situés les différents
-restaurants présents dans l'application.
-\unscaledFigure{images/map.png}{Carte du campus avec la localisation des différents
-restaurants de l'application}
+\subsection{Trouver les restaurants sur le campus}
+Pour les nouveaux étudiants, il est possible d'accéder via le volet de navigation
+à la carte du campus afin de localiser rapidement où sont situés les différents
+restaurants présents sur le campus.
+Pour cela, cliquez sur \includegraphics{images/drawerButton.png}. Ce bouton va ouvrir le volet de navigation. Cliquez ensuite sur "Carte"
+pour accéder à la fenêtre ci-contre : 
+\unscaledFigure{images/map.png}{Carte du campus avec la localisation des
+différents restaurants présents}
 
-Pour toute information complémentaire, l’héxanome H4404 reste disponible
-à l’adresse mail suivante : heptanhommes@googlegroups.com. 
+En cliquant sur un des marqueurs rouges, un popup apparaît avec le nom du
+restaurant. Par un simple clic sur ce popup, vous pouvez accéder à la fenêtre
+détaillant un restaurant présentés ci-dessus.
+
+\subsection{Personnaliser l'application}
+Les paramètres de l'application peuvent être modifiés à tout moment dans la menu
+préférences. Pour y accéder cliquez sur \includegraphics{images/drawerButton.png}.
+Ce bouton va ouvrir le volet de navigation. Cliquez ensuite sur "Préférences"
+pour accéder à la fenêtre ci-contre : 
+\unscaledFigure{images/prefs.png}{Fenêtre des préférences}
+
+Dans la section "Critère de classement des restaurants", il est possible de choisir si vous 
+préférez que vos restaurants soient choisis et triées selon la proximité ou le temps 
+d'attente.
+
+Rajouter un truc sur les restaurants préférés en fonction de ce que julien va modifier
+cet aprèm
+
+La notification quotidienne qui vous est envoyée par défaut à midi chaque 
+jour de la semaine. Néanmoins, il est possible d'activer/désactiver  en cliquant sur 
+\includegraphics{images/onoff.png} en face de "Recevoir des notifications". 
+Il est également possible de changer l'heure de cette notification
+afin qu'elle puisse vous prévenir au moment le plus opportun selon votre situation. 
+Si les notifications sont activées, un sélecteur d'heure va s'afficher en dessous comme 
+sur l'image ci-contre : \unscaledFigure{images/time.png}{Outil permettant de 
+sélectionner l'heure d'envoi de la notification}
+
+
+Pour toute information complémentaire, l'heptanôme H4404 reste disponible
+à l'adresse email suivante : heptanhommes@googlegroups.com. 
