--- a/TrouvTonResto/app/src/main/res/values/strings.xml
+++ b/TrouvTonResto/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="titleRestos">Restaurants</string>
     <string name="titleCarte">Carte</string>
-    <string name="titlePref">Paramètres</string>
+    <string name="titlePref">Préférences</string>
     <string name="titleRouteFragment">Itinéraire</string>
     <string name="titleRestoPager">Restaurant</string>
     <string name="search_title">Chercher</string>
