Relecture specif + MAJ doc

--- a/TrouvTonResto/Rapport/sections/documentation.tex
+++ b/TrouvTonResto/Rapport/sections/documentation.tex
@@ -93,8 +93,9 @@ Dans la section "Critère de classement des restaurants", il est possible de cho
 préférez que vos restaurants soient choisis et triées selon la proximité ou le temps 
 d'attente.
 
-Rajouter un truc sur les restaurants préférés en fonction de ce que julien va modifier
-cet aprèm
+Dans la section "Restaurants préférés", vous pouvez choisir quels restaurants
+vous souhaitez afficher dans la fenêtre principale de l'application. Pour ne
+pas afficher un restaurant, décochez simplement la case à côté du nom de celui-ci.
 
 La notification quotidienne qui vous est envoyée par défaut à midi chaque 
 jour de la semaine. Néanmoins, il est possible d'activer/désactiver  en cliquant sur 
@@ -104,7 +105,8 @@ afin qu'elle puisse vous prévenir au moment le plus opportun selon votre situat
 Si les notifications sont activées, un sélecteur d'heure va s'afficher en dessous comme 
 sur l'image ci-contre : \unscaledFigure{images/time.png}{Outil permettant de 
 sélectionner l'heure d'envoi de la notification}
-
+Pour définir les jours de la semaine où vous souhaitez recevoir une notification, cliquez sur le jour correspondant dans la barre en dessous du sélecteur d'heure. La notification vous est envoyée si le jour est en gris foncée. Par exemple, avec la configuration présente sur l'image suivante, vous ne recevrez une notification que le lundi et le vendredi à midi. 
+\unscaledFigure{images/pref_day.png}{Avec cette configuration, la notification n'est envoyée que le lundi et le vendredi à 12h}
 
 Pour toute information complémentaire, l'heptanôme H4404 reste disponible
 à l'adresse email suivante : heptanhommes@googlegroups.com. 
