--- a/TrouvTonResto/Rapport/sections/specification.tex
+++ b/TrouvTonResto/Rapport/sections/specification.tex
@@ -1,23 +1,23 @@
-Notre analyse de besoins a fait ressortir la préoccupation et la difficulté
+Notre analyse des besoins a fait ressortir la préoccupation et la difficulté
 pour les étudiants de faire le bon choix de restaurant à chaque repas.
-Ce besoin peut paraitre accessoire ou futile mais l'attente aux restaurants
+Ce besoin peut paraître accessoire ou futile mais l'attente aux restaurants
 peut être une véritable source de stress pour un étudiant pressé. Il en
-va de même pour la constitution du repas qui peut décevoir l'étudiant une
-fois la longue attente terminée. Cela peut conduire certains étudiants à 
+va de même pour la constitution du repas qui peut décevoir une personne ayant
+longuement attendu pour manger. Cela peut conduire certains étudiants à 
 élaborer des stratégies complexes pour manger à la bonne heure et au bon
 endroit.
 
 Nous avons donc décidé de travailler sur un outil permettant aux étudiants
-d'avoir tout les éléments entre les mains au moment de la prise de décision.
+d'avoir tous les éléments entre les mains au moment de la prise de décision.
 
 Nous avons ensuite identifié les éléments importants utilisés par les étudiants lors de la prise de décision :
 \begin{itemize}
 \item le temps d'attente avant de pouvoir manger,
 \item le menu,
-\item la distance entre la localisation actuelle et le restaurant.
+\item et la distance entre la localisation actuelle et le restaurant.
 \end{itemize}
 
-Les étudiants étrangers connaissant peu le campus peuvent en plus avoir besoin
+Les étudiants étrangers connaissant peu le campus peuvent, en plus, avoir besoin
 d'un itinéraire guidé pour se rendre aux restaurants.
 
 Ce sont ces fonctionnalités principales qui sont à la base de la raison
@@ -25,22 +25,22 @@ d'être de l'application.
 Ces fonctionnalités principales donnent lieu aux fonctionnalités
 détaillées suivantes :
 \begin{itemize}
-\item visualisation du temps d'attente en fonction de
+\item la visualisation du temps d'attente en fonction de
 l'heure,
-\item visualisation du menu du jour,
-\item visualisation de la localisation sur un plan du campus,
-\item tri des restaurants selon le temps d'attente en fonction de l'heure,
-\item tri des restaurants selon la distance,
-\item envoie d'une notification concernant le meilleur choix de restaurant
+\item la visualisation du menu du jour,
+\item la visualisation de la localisation sur un plan du campus,
+\item le tri des restaurants selon le temps d'attente en fonction de l'heure,
+\item le tri des restaurants selon la distance,
+\item et l'envoi d'une notification quotidienne concernant le meilleur choix de restaurant
 (selon les critères de tri ci-dessus).
 \end{itemize}
 
 De plus l'application doit s'adapter à l'utilisateur et doit prendre en
 compte : 
 \begin{itemize}
-\item les restaurants fréquentés par l'utilisateur,
-\item le critère de classement préféré de l'utilisateur,
+\item les restaurants fréquentés,
+\item le critère de classement préféré,
 \item si l'utilisateur désire être notifié,
 \item à quelle heure l'utilisateur désire être notifié,
-\item quels jours l'utilisateur désire être notifié.
+\item et quels jours il désire être notifié.
 \end{itemize}
