--- a/TrouvTonResto/Rapport/sections/analyseExistant.tex
+++ b/TrouvTonResto/Rapport/sections/analyseExistant.tex
@@ -1,10 +1,12 @@
-Pour l’instant, peu de solutions existent pour faciliter la vie des 
-utilisateurs étudiants ou personnels sur le campus de la Doua dans leur 
-choix de restaurant. Nous pouvons répertorier les services existants suivants.
+Pour l’instant, peu de solutions existent pour faciliter le choix de
+restaurant des
+utilisateurs, étudiants ou personnels, sur le campus de la Doua. 
+
+Nous pouvons répertorier les services existants suivants.
 
 Pour les étudiants de l'INSA, sur le site planete.insa-lyon.fr sont disponibles 
 le menu du jour des restaurants de l'INSA ainsi que le crédit repas de 
-l'abonné. Ce service propose notamment quelques problèmes : 
+l'abonné. Ce service présente néanmoins quelques problèmes : 
 \begin{itemize}
 \item la connexion depuis un smartphone est compliquée : le site n'est pas 
 adapté aux petits écrans,
@@ -14,19 +16,20 @@ n'est pas pratique pour les utilisateurs,
 menu réellement proposé dans le restaurant,
 \item il est possible de visualiser son crédit repas mais il est impossible 
 de le recharger.
+\item ce dispositif n'est disponible que pour des utilisateurs de l'INSA
 \end{itemize}
 
-En clair, ce dispositif n'est disponible que pour les étudiants de l'INSA 
-et ne propose pas un service complet.
+Cette solution n'est donc pas tout à fait complète.
 
 Le CROUS a également mis un place un service qui peut se rapprocher de notre 
 sujet : un application smartphone (IZLY) est disponible et permet de 
 recharger son crédit repas. Cependant cette solution reste limitée à ce 
-problème de rechargement du crédit repas, et ne permet pas aux utilisateurs 
-de choisir leur restaurant, et ne leur donne aucune information spécifique 
+problème de rechargement du crédit, et ne permet pas aux utilisateurs 
+de choisir leur restaura:nt, et ne leur donne aucune information spécifique 
 aux restaurants du campus.
 
 Au final, aucun dispositif existant ne répond réellement à la problématique 
-que nous nous sommes fixés, qui est de créer une application qui permet à 
-un utilisateur du campus de la Doua de choisir facilement dans quel restaurant 
-il va manger chaque midi.
+que nous nous sommes fixés, qui est de permettre à un utilisateur du
+campus de la Doua de choisir facilement dans quel restaurant il va
+macréer une application qui permet à 
+unger chaque midi.
